<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.sap.cloud.security.xsuaa</groupId>
	<artifactId>parent</artifactId>
	<version>2.1.0</version>
	<packaging>pom</packaging>

	<name>parent</name>
	<url>https://github.com/SAP/cloud-security-xsuaa-integration</url>
	<description>XSUAA authentication and authorization service integration libraries and samples for authenticating
		users and services
	</description>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>XSUAA Development</name>
			<email>xsuaa-development@sap.com</email>
			<organization>SAP SE</organization>
			<organizationUrl>https://www.sap.com</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/SAP/cloud-security-xsuaa-integration.git</connection>
		<developerConnection>sscm:git:git://github.com/SAP/cloud-security-xsuaa-integration.git</developerConnection>
		<url>http://github.com/SAP/cloud-security-xsuaa-integration/tree/master</url>
	</scm>


	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<properties>
		<project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<spring.core.version>5.1.1.RELEASE</spring.core.version>
		<spring.boot.version>2.1.5.RELEASE</spring.boot.version>
		<junit.version>4.12</junit.version>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
		<spring.security.version>5.1.1.RELEASE</spring.security.version>
	</properties>

	<modules>
		<module>api</module>
		<module>token-client</module>
		<module>spring-xsuaa</module>
		<module>spring-xsuaa-it</module>
		<module>spring-xsuaa-test</module>
		<module>spring-xsuaa-mock</module>
		<module>spring-xsuaa-starter</module>
	</modules>

	<dependencyManagement>
		<dependencies>
		</dependencies>
	</dependencyManagement>

	<profiles>

		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<pluginManagement>
					<plugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-javadoc-plugin</artifactId>
							<version>3.0.1</version>
						</plugin>

						<plugin>
							<groupId>net.revelc.code.formatter</groupId>
							<artifactId>formatter-maven-plugin</artifactId>
							<version>2.8.1</version>
							<configuration>
								<encoding>${project.build.sourceEncoding}</encoding>
								<lineEnding>LF</lineEnding>
								<directories>
									<directory>${project.basedir}/src/main/java</directory>
									<directory>${project.basedir}/src/test/java</directory>
								</directories>
								<configFile>${project.basedir}/../etc/eclipse_settings.xml</configFile>
							</configuration>
							<executions>
								<execution>
									<phase>process-sources</phase>
									<goals>
										<goal>format</goal> <!-- run with mvn formatter:format -->
									</goals>
								</execution>
							</executions>
						</plugin>

						<plugin>
							<groupId>net.revelc.code</groupId>
							<artifactId>impsort-maven-plugin</artifactId>
							<version>1.4.0</version>
							<configuration>
								<groups>java.,javax.,org.,com.</groups>
								<staticGroups>java,*</staticGroups>
								<staticAfter>false</staticAfter>
								<removeUnused>true</removeUnused>
								<excludes>
									<exclude>**/test/resources/**</exclude>
								</excludes>
							</configuration>
							<executions>
								<execution>
									<id>sort-imports</id>
									<goals>
										<goal>sort</goal>
									</goals>
								</execution>
							</executions>
						</plugin>
					</plugins>
				</pluginManagement>
			</build>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>


					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.9.1</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<!-- GPG keyname var set in the settings.xml maven file -->
									<keyname>${gpg.keyname}</keyname>
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.sonatype.plugins</groupId>
						<artifactId>nexus-staging-maven-plugin</artifactId>
						<version>1.6.8</version>
						<extensions>true</extensions>
						<configuration>
							<serverId>ossrh</serverId>
							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
							<autoReleaseAfterClose>true</autoReleaseAfterClose>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
